updated sizing on sales funnel div. fixed alignment as well

--- a/_base.scss
+++ b/_base.scss
@@ -133,8 +133,9 @@ img {
 }
 
 .totalmarket {
+    padding-top: 2px;
     img {
-        width:15%;
+        width:12%;
     }
 }
 .prospects {
@@ -144,13 +145,13 @@ img {
 }
 .leads {
     img {
-        width:15%;
+        width:19%;
     }
 }
 
 .sales {
     img {
-        width:15%;
+        width:18%;
     }
 }
 
